[project]
name = "comfyui_nnlatentupscale"
description = "Nodes:NNLatentUpscale, A custom ComfyUI node designed for rapid latent upscaling using a compact neural network, eliminating the need for VAE-based decoding and encoding."
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/Goktug/ComfyUi_NNLatentUpscale"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "goktug"
DisplayName = "ComfyUi_NNLatentUpscale"
Icon = ""